# Pro-Hedge-Trading

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  env.example  pyproject.toml  readme.md  requirements.txt  run.bat  run.sh  setup.py
.github/workflows/: ci.yml
scripts/: install.sh
src/: __init__.py
src/core/: __init__.py  api_utils.py  trading_operations.py
src/exchanges/: __init__.py  binance_operations.py  hyperliquid_operations.py
src/ui/: __init__.py  app.py  app_clean.py
tests/: __init__.py  test_api_utils.py
